AI housing customization (#726)
Tested in Crusader HD and Extreme with all 16 AI's

* AI housing customization

* Add localization

* Update conditional check

* Add option to customize AI delete housing

* Adjust housing logic

* Fix csproj because I manually removed a file

* Change delete housing to be buffer room after stop building houses rather than fixed value

* Set max values to 500 to support random use cases

Co-authored-by: Krarilotus <51748815+Krarilotus@users.noreply.github.com>

--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -1,6 +1,26 @@
 // ======================
 //         dev
 // ======================
+ai_housing
+{
+"Customize the AIs decision to build and delete houses"
+}
+
+ai_buildhousing_descr
+{
+"Customize the AIs decision to build and delete houses"
+}
+
+build_housing_descr
+{
+"Number of extra available housing before AI stops building houses"
+}
+
+delete_housing_descr
+{
+"After the AI has reached this additional amount of available housing after it stopped building houses, it will delete houses"
+}
+
 o_change_siege_engine_spawn_position_catapult
 {
 "Zentriert Belagerungsgeräte nach der Konstruktion"
