--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -21,6 +21,26 @@ delete_housing_descr
 "After the AI has reached this additional amount of available housing after it stopped building houses, it will delete houses"
 }
 
+aiv_prompt
+{
+"Custom modified AIVs detected. Click 'Yes' to backup then clear modified files, 'No' to overwrite and delete original backup, 'Cancel' to cancel."
+}
+
+aiv_cli_prompt
+{
+"Custom modified AIVs detected. Enter 'delete' to erase or enter folder name to copy files to."
+}
+
+install_abort
+{
+"Installation aborted"
+}
+
+backup_aiv_select
+{
+"Select Backup AIV folder"
+}
+
 o_change_siege_engine_spawn_position_catapult
 {
 "Zentriert Belagerungsgeräte nach der Konstruktion"
