Updated AIV installation to allow install without overwriting backup and make wording more clear

--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -23,7 +23,7 @@ delete_housing_descr
 
 aiv_prompt
 {
-"Custom modified AIVs detected. Click 'Yes' to backup then clear modified files, installing new AIVs, 'No' to overwrite and delete original backup, and install new AIVs, 'Cancel' to cancel."
+"Custom modified AIVs detected. Before installing, click 'Yes' to save the currently installed AIVs without overwriting the original backup. Click 'No' to overwrite installed AIVs without backing them up, and 'Cancel' to cancel."
 }
 
 aiv_cli_prompt
