--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -31,6 +31,11 @@ aiv_cli_prompt
 "Custom modified AIVs detected. Enter 'delete' to erase or enter folder name to copy files to."
 }
 
+install_abort_io
+{
+"Installation aborted. Files with the same name already exist in this folder. Please try again and select a different folder."
+}
+
 install_abort
 {
 "Installation aborted"
