--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -1,6 +1,17 @@
 // ======================
 //         dev
 // ======================
+ai_defense
+{
+"修复ai不会补充防守兵种"
+}
+
+ai_defense_descr
+{
+"当ai城墙防守部队出现减员时，如果城外防守部队仍然存在，那么ai将&
+不会补充城墙防守部队。"
+}
+
 ai_housing
 {
 "Customize the AIs decision to build and delete houses"
@@ -1010,18 +1021,6 @@ o_xtreme_descr
 ui_AIV
 {
 	"AIV"
-}
-
-ai_defense
-{
-	"修复ai不会补充防守兵种"
-}
-
-ai_defense_descr
-{
-	"当ai城墙防守部队出现减员时，如果城外防守部队仍然存在，那么ai将&
-不会补充城墙防守部队。打开此选项后ai将会正确补充减员。这也会加快ai&
-训练防守部队的速度。"
 }
 
 ai_access
