--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -1,6 +1,16 @@
 // ======================
 //         dev
 // ======================
+ai_defense
+{
+"Исправляет подкрепление войск обороны AI"
+}
+
+ai_defense_descr
+{
+"Исправлен баг, из-за которого AI не усиливал недостающие войска на стенах и башнях, пока оборонительные патрули все еще были вокруг."
+}
+
 ai_housing
 {
 "Настройка решения ИИ о строительстве и удалении домов"
@@ -998,19 +1008,6 @@ o_xtreme_descr
 ui_AIV
 {
 	"AIV"
-}
-
-ai_defense
-{
-	"Исправляет подкрепление войск обороны AI"
-}
-
-ai_defense_descr
-{
-	"Исправлен баг, из-за которого AI не усиливал недостающие войска
-на стенах и башнях, пока оборонительные патрули все еще были вокруг. &
-Более того, вероятность того, что AI вербуют оборонительные войска, была
-увеличился, так как это значение было равно нулю."
 }
 
 ai_access
