factor out extra defense (#758)
* factor out extra defense

* removed legacy fix completely

* removed standard options

* commas removed, that made no sense (comma after last bracket in one option)

* changed the text for fix defense troops option

* Update German.txt

* Update Chinese.txt

* Update Hungarian.txt

* Update Polish.txt

* Update Russian.txt

Co-authored-by: Krarilotus <51748815+Krarilotus@users.noreply.github.com>

--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -1,6 +1,16 @@
 // ======================
 //         dev
 // ======================
+ai_defense
+{
+"Verstärkung der Burgverteidigung fixen"
+}
+
+ai_defense_descr
+{
+"Fixt einen Bug, der die KI davon abhielt fehlende Truppen auf Wällen und Türmen zu verstärken, solange noch Defensivpatrouillen vorhanden waren."
+}
+
 ai_housing
 {
 "Passe an, wie die KI entscheidet, Häuser zu bauen und abzureißen"
@@ -992,19 +1002,6 @@ o_xtreme_descr
 ui_AIV
 {
 	"AIV"
-}
-
-ai_defense
-{
-	"Verstärkung der Burgverteidigung fixen"
-}
-
-ai_defense_descr
-{
-	"Fixt einen Bug, der die KI davon abhielt fehlende Truppen auf &
-Wällen und Türmen zu verstärken, solange noch Defensivpatrouillen &
-vorhanden waren. Außerdem wurde generell die Wahrscheinlichkeit erhöht &
-Verstärkung zu rekrutieren, da diese bei einigen KIs auf null gesetzt war."
 }
 
 ai_access
