spearmen run change 2.0

--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -1,6 +1,16 @@
 // ======================
 //         dev
 // ======================
+u_spearmen_run
+{
+"Spearmen run by default instead of walking"
+}
+
+u_spearmen_run_descr
+{
+"Makes spearmen run by default instead of the slow walking."
+}
+
 ai_housing
 {
 "Customize the AIs decision to build and delete houses"
