Customize AI initial defence recruit time (#733)
Co-authored-by: Krarilotus <51748815+Krarilotus@users.noreply.github.com>

tested by Krarilotus in Normal and Extreme,
Tested in Normal Multiplayer with Kimberly
Works exactly like described and expected

--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -1,6 +1,16 @@
 // ======================
 //         dev
 // ======================
+ai_recruitstate_initialtimer
+{
+"Customise the initial AI's defence recruit time"
+}
+
+ai_recruitstate_initialtimervalue_descr
+{
+"Set this value to number of months for which the AI will exclusively recruit defence troops, unless it has already filled up its defence total"
+}
+
 ai_defense
 {
 "Исправляет подкрепление войск обороны AI"
