Add seed modification possibility (#725)
* Added seed modification possibility with 2 options

* Fixed crash

* german translation done :)

* Update Version.cs

changed true to false in line 3351 to get not both checkboxes ticked by default (they should NEVER be ticked together!)

* Update Chinese.txt

* Update English.txt

* Update German.txt

* Update Hungarian.txt

* Update Polish.txt

* Update Russian.txt

Co-authored-by: peterkohlberger <ckpengine@gmail.com>
Co-authored-by: LordHansCapon <walrus.grease2@gmail.com>
Co-authored-by: Krarilotus <51748815+Krarilotus@users.noreply.github.com>

This will need some more investigation to work continuously throughout one game session and not only after restarting the game.

--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -1,6 +1,31 @@
 // ======================
 //         dev
 // ======================
+o_seed_modification_possibility_title
+{
+"Game Seed"
+}
+
+o_seed_modification_possibility_only_set
+{
+"Enable game seed"
+}
+
+o_seed_modification_possibility_only_set_descr
+{
+"Setting the Game seed will allow AI-only games to play out the same way if the same map settings are used. For player-AI games, it will ensure the same start conditions in the map (AIV selection for example). To set the game seed, enable this option and create a file called 'live' with a 6 digit number in the game install/gameseeds directory. CAUTION: This feature only works after also restarting the game!"
+}
+
+o_seed_modification_possibility
+{
+"Enable & Save game seeds"
+}
+
+o_seed_modification_possibility_descr
+{
+"This option will save the seed from games that do not have a live seed set, so you can rename them to 'live' in order to recreate the match afterwards."
+}
+
 ai_recruitstate_initialtimer
 {
 "Customise the initial AI's defence recruit time"
