--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -1,6 +1,16 @@
 // ======================
 //         dev
 // ======================
+o_disable_border_scrolling
+{
+"Deaktiviere scrollen am Bildschirmrand"
+}
+
+o_disable_border_scrolling_descr
+{
+"Bewegen des Mauszeigers zum Bildschirmrand bewegt nicht mehr die Ansicht."
+}
+
 o_seed_modification_possibility_title
 {
 "Game Seed"
