--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -1,6 +1,16 @@
 // ======================
 //         dev
 // ======================
+o_disable_border_scrolling
+{
+"Disable border scrolling"
+}
+
+o_disable_border_scrolling_descr
+{
+"Moving the cursor to the edge of the screen will no longer move its position."
+}
+
 o_seed_modification_possibility_title
 {
 "Game Seed"
